@@ -230,7 +230,7 @@ SOFTWARE.
 
 * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
 
-11. Bootstrap copyright (imageMagick utilizes CSS for its web pages under this
+11. Bootstrap copyright (ImageMagick utilizes CSS for its web pages under this
     copyright):
 
 Bootstrap v3.3.5 (http://getbootstrap.com)
