@@ -5,6 +5,8 @@
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28179).
   * Type cast intensity variable (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28182).
+  * Fix ModulusAdd & ModulusSubstract for HDRI compositing (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28186).
 
 2015-07-25  6.9.2-0 Dirk Lemstra <dirk@lem.....org>
   * Added "-set colorspace:auto-grayscale=false" that will prevent automatic
